--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Website</h3>
-	            <p><a href="#">yoursite.com</a></p>
+	            <p><a href="https://guruuewe.github.io/portfolio/">https://guruuewe.github.io/portfolio/</a></p>
 	          </div>
           </div>
         </div>
